baler: gui - HeatMap layout adjustment.
Change-Id: Ia2dd725a2741a577f9faf8be466634d275e1e799

--- a/baler/src/bhttpd/html/css/baler.css
+++ b/baler/src/bhttpd/html/css/baler.css
@@ -49,9 +49,6 @@
 
 .HeatMapDisp {
 	float: left;
-	border: solid;
-	border-color: grey;
-	border-width: 1px;
 }
 
 .HeatMapFillerDiv {
@@ -62,6 +59,10 @@
 	border-color: green;
 	border-width: 1px;
 	/**/
+}
+
+.HeatMapDispCtrl {
+	padding: 10px;
 }
 
 .baler_Labels {
