baler: gui - HeatMap bug fix and add navigation
- Fix various heat map bugs.
- Add navigation support.

Change-Id: Ie1c4eff9c4c48fac3e0019d5aab7378d24bc1177

--- a/baler/src/bhttpd/html/css/baler.css
+++ b/baler/src/bhttpd/html/css/baler.css
@@ -119,3 +119,17 @@
     );
     vertical-align: middle;
 }
+
+.HeatMapNavCtrl input, .HeatMapLayerCtrl input {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+}
+
+.HeatMapNavCtrlLabel, .HeatMapLayerCtrlLabel {
+	/* float: left; */
+	display: inline-block;
+	width: 7em;
+	text-align: right;
+	padding-right: 0.5em;
+}
