baler: gui - add units in all style-related code
Change-Id: Ia7d059d201bbc6812264dea717805be4ba41be76

--- a/baler/src/bhttpd/html/css/baler.css
+++ b/baler/src/bhttpd/html/css/baler.css
@@ -12,8 +12,8 @@
 
 .PtnTable, .PtnTable ul {
 	list-style: none;
-	margin-left: 0;
-	padding: 0;
+	margin-left: 0px;
+	padding: 0px;
 }
 
 .PtnTable {
