baler: baler.cofee - add MetaCluster* widget
- Add MetaClusterStat widget
- Add MetaClusterCtrl widget
- Add style for MetaClusterCtrl and MetaClusterStat
- Add example code to use MetaClusterCtrl in ptn_test

Change-Id: I2450bc2b0b00e98fbd61045c0d1dbd96165e6665

--- a/baler/src/bhttpd/html/css/baler.css
+++ b/baler/src/bhttpd/html/css/baler.css
@@ -120,16 +120,22 @@
     vertical-align: middle;
 }
 
-.HeatMapNavCtrl input, .HeatMapLayerCtrl input {
+.HeatMapNavCtrl input, .HeatMapLayerCtrl input, .MetaClusterCtrl input {
 	border-top: none;
 	border-left: none;
 	border-right: none;
 }
 
 .HeatMapNavCtrlLabel, .HeatMapLayerCtrlLabel {
-	/* float: left; */
 	display: inline-block;
 	width: 7em;
+	text-align: right;
+	padding-right: 0.5em;
+}
+
+.MetaClusterCtrlLabel, .MetaClusterStatLabel {
+	display: inline-block;
+	width: 8em;
 	text-align: right;
 	padding-right: 0.5em;
 }
